--- a/views/ballets/new.liquid
+++ b/views/ballets/new.liquid
@@ -1,12 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% layout "layout.liquid" %} {% block content %}
+<div>
+  <form action="/fruits" method="post">
+    <fieldset>
+      <legend>Create a New Fruit</legend>
+      <label>
+        NAME:<input type="text" name="name" placeholder="enter fruit name" />
+      </label>
+      <label>
+        COLOR:<input type="text" name="color" placeholder="enter fruit name" />
+      </label>
+      <label> READY TO EAT:<input type="checkbox" name="readyToEat" /> </label>
+    </fieldset>
+    <input type="submit" value="create new fruit" />
+  </form>
+</div>
+{% endblock %}
