--- a/views/ballets/show.liquid
+++ b/views/ballets/show.liquid
@@ -1,12 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% layout "layout.liquid" %} {% block content %}
+<div>
+    <article>
+        <h2>
+            {{ ballets.name }} -
+
+            {% if readyToEat == true %}
+            Ready to Eat
+            {% else %}
+            Not Ready to Eat
+            {% endif %}
+        </h2>
+        <h3>{{ ballet.composed }}</h3>
+        <a href="/ballets/{{ ballets._id }}/edit"><button>Edit</button></a>
+        <form action="/ballets/{{ ballets._id }}?_method=DELETE" method="POST">
+            <input type="submit" value="Delete" />
+        </form>
+        <a href="/ballets/"><button>Back to Main</button></a>
+    </article>
+</div>
+{% endblock %}
