--- a/views/companies/edit.liquid
+++ b/views/companies/edit.liquid
@@ -1,12 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% layout "layout.liquid" %} {% block content %}
+<div>
+    <form action="/fruits/{{fruit._id}}?_method=PUT" method="post">
+        <fieldset>
+            <legend>Edit {{fruit.name}}</legend>
+            <label>
+                NAME:<input 
+                type="text" 
+                name="name" 
+                placeholder="enter fruit name" 
+                value="{{fruit.name}}" />
+            </label>
+            <label>
+                COLOR:<input 
+                type="text" 
+                name="color" 
+                placeholder="enter fruit name" 
+                value="{{fruit.color}}" />
+            </label>
+            <label>
+                READY TO EAT:<input 
+                type="checkbox" 
+                name="readyToEat" {% if fruit.readyToEat==true %} checked
+                {% endif %} />
+            </label>
+        </fieldset>
+        <input type="submit" value="Edit {{fruit.name}}" />
+    </form>
+</div>
+{% endblock %}
