--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -40,7 +40,7 @@
 
 <body>
     <header>
-        <h1>The Fruits App</h1>
+        <h1>The Ballet App</h1>
     </header>
 
     <main>{% block content %}My default content{% endblock %}</main>
