fixed watched logic

--- a/views/ballets/index.liquid
+++ b/views/ballets/index.liquid
@@ -5,7 +5,7 @@
   <article>
     <a href="/ballets/{{ ballet.id }}">{{ ballet.name }}</a>
       <h2>
-        <!-- {{ballet.name}} - {% if ballet.readyToEat == true %} Watched {% else %} Not
+        <!-- {{ballet.name}} - {% if ballet.watched == true %} Watched {% else %} Not
         Watched {% endif %} -->
       </h2>
     </a>
