--- a/views/ballets/new.liquid
+++ b/views/ballets/new.liquid
@@ -12,6 +12,7 @@
       <label> WATCHED:<input type="checkbox" name="watched" /> </label>
     </fieldset>
     <input type="submit" value="create new ballet" />
+    <a href="/ballets/"><button>Back</button></a>
   </form>
 </div>
 {% endblock %}
