--- a/views/ballets/show.liquid
+++ b/views/ballets/show.liquid
@@ -15,7 +15,7 @@
         <form action="/ballets/{{ ballets.id }}?_method=DELETE" method="POST">
             <input type="submit" value="Delete" />
         </form>
-        <a href="/ballets/"><button>Back to Main</button></a>
+        <a href="/ballets/"><button>Back</button></a>
     </article>
 </div>
 {% endblock %}
