seeded and updated all liquid files for companies

--- a/views/ballets/edit.liquid
+++ b/views/ballets/edit.liquid
@@ -13,8 +13,8 @@
             <label>
                 COMPOSED:<input 
                 type="text" 
-                name="color" 
-                placeholder="enter ball name" 
+                name="composed" 
+                placeholder="enter composer name" 
                 value="{{ballets.composed}}" />
             </label>
             <label>
@@ -25,7 +25,7 @@
             </label>
         </fieldset>
         <input type="submit" value="Edit {{ballets.name}}" />
-        <a href="/ballets/"><button>Back to Main</button></a>
+        <a href="/ballets/"><button>Back</button></a>
     </form>
 </div>
 {% endblock %}
