--- a/views/user/login.liquid
+++ b/views/user/login.liquid
@@ -1,14 +1,24 @@
 {% layout "layout.liquid" %}
 {% block content %}
       <div>
-        <form action="/user/login" method="post">
+        <form 
+        action="/user/login" 
+        method="post">
           <fieldset>
             <legend>User Login</legend>
             <label
-              >USERNAME: <input type="text" name="username" required />
+              >USERNAME: 
+              <input 
+              type="text" 
+              name="username" 
+              required />
             </label>
             <label
-              >PASSWORD: <input type="password" name="password" required />
+              >PASSWORD: 
+              <input 
+              type="password" 
+              name="password" 
+              required />
             </label>
             <input type="submit" value="Login" />
           </fieldset>
