--- a/views/user/signup.liquid
+++ b/views/user/signup.liquid
@@ -3,9 +3,17 @@
   <form action="" method="post">
     <fieldset>
       <legend>New User</legend>
-      <label>USERNAME: <input type="text" name="username" required /> </label>
+      <label>USERNAME: 
+        <input 
+        type="text" 
+        name="username" 
+        required /> </label>
       <label
-        >PASSWORD: <input type="password" name="password" required />
+        >PASSWORD: 
+        <input 
+        type="password" 
+        name="password" 
+        required />
       </label>
       <input type="submit" value="Create Account" />
       <a href="/login/"><button>Back to Main</button></a>
