--- a/views/companies/edit.liquid
+++ b/views/companies/edit.liquid
@@ -1,30 +1,31 @@
 {% layout "layout.liquid" %} {% block content %}
 <div>
-    <form action="/fruits/{{fruit._id}}?_method=PUT" method="post">
+    <form action="/companies/{{companies.id}}?_method=PUT" method="post">
         <fieldset>
-            <legend>Edit {{fruit.name}}</legend>
+            <legend>Edit {{companies.name}}</legend>
             <label>
                 NAME:<input 
                 type="text" 
                 name="name" 
-                placeholder="enter fruit name" 
-                value="{{fruit.name}}" />
+                placeholder="enter companies name" 
+                value="{{companies.name}}" />
             </label>
             <label>
-                COLOR:<input 
+                LOCATION:<input 
                 type="text" 
-                name="color" 
-                placeholder="enter fruit name" 
-                value="{{fruit.color}}" />
+                name="location" 
+                placeholder="enter companies name" 
+                value="{{companies.location}}" />
             </label>
             <label>
-                READY TO EAT:<input 
+                WATCHED:<input 
                 type="checkbox" 
-                name="readyToEat" {% if fruit.readyToEat==true %} checked
+                name="WATCHED" {% if companies.watched==true %} checked
                 {% endif %} />
             </label>
         </fieldset>
-        <input type="submit" value="Edit {{fruit.name}}" />
+        <input type="submit" value="Edit {{companies.name}}" />
+        <a href="/companies/"><button>Back</button></a>
     </form>
 </div>
 {% endblock %}
