--- a/views/companies/new.liquid
+++ b/views/companies/new.liquid
@@ -1,17 +1,32 @@
 {% layout "layout.liquid" %} {% block content %}
 <div>
-  <form action="/fruits" method="post">
+  <form action="/companies" method="post">
     <fieldset>
-      <legend>Create a New Fruit</legend>
+      <legend>Create a New Company</legend>
       <label>
-        NAME:<input type="text" name="name" placeholder="enter fruit name" />
+        NAME:
+        <input 
+        type="text" 
+        name="name" 
+        placeholder="enter company name" />
       </label>
       <label>
-        COLOR:<input type="text" name="color" placeholder="enter fruit name" />
+        LOCATION:
+        <input 
+        type="text" 
+        name="location" 
+        placeholder="enter company name" />
       </label>
-      <label> READY TO EAT:<input type="checkbox" name="readyToEat" /> </label>
+      <label> WATCHED:
+        <input 
+        type="checkbox" 
+        name="watched" /> 
+      </label>
     </fieldset>
-    <input type="submit" value="create new fruit" />
+    <input 
+    type="submit" 
+    value="create new company" />
   </form>
+  <a href="/companies/"><button>Back</button></a>
 </div>
 {% endblock %}
