--- a/views/companies/show.liquid
+++ b/views/companies/show.liquid
@@ -2,20 +2,24 @@
 <div>
     <article>
         <h2>
-            {{ fruit.name }} -
-
-            {% if readyToEat == true %}
-            Ready to Eat
+            {{ companies.name }}
+            <h3> Location: <u>{{ companies.location }}</u> </h3>
+        <h3> Year founded: <u>{{ companies.founded }}</u> </h3>
+        <h3> Rank: <u>{{ companies.rank }}</u></h3>
+        <h3> Rank year: <u>{{ companies.rankyear }}</u></h3>
+        <h3>
+            Watched by user? {% if watched == true %}
+            Watched
             {% else %}
-            Not Ready to Eat
-            {% endif %}
-        </h2>
-        <h3>{{ fruit.color }}</h3>
-        <a href="/fruits/{{ fruit._id }}/edit"><button>Edit</button></a>
-        <form action="/fruits/{{ fruit._id }}?_method=DELETE" method="POST">
+            Not Watched
+            {% endif %} 
+            <!-- {{ ballets.watched }} -->
+        </h3>
+        <a href="/companies/{{ companies.id }}/edit"><button>Edit</button></a>
+        <form action="/companies/{{ companies.id }}?_method=DELETE" method="POST">
             <input type="submit" value="Delete" />
         </form>
-        <a href="/fruits/"><button>Back to Main</button></a>
+        <a href="/companies/"><button>Back</button></a>
     </article>
 </div>
 {% endblock %}
