--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -45,7 +45,9 @@
 
     <main>{% block content %}My default content{% endblock %}</main>
 
-    <footer></footer>
+    <footer>
+        For more information about this data visit: https://www.dancedataproject.com/
+    </footer>
 </body>
 
 </html>
