added log out buttons

--- a/views/ballets/index.liquid
+++ b/views/ballets/index.liquid
@@ -12,6 +12,6 @@
 
   </article>
   {% endfor %}
-  <a href="/logout/"><button>Logout</button></a>
+  <a href="/user/logout"><button>Logout</button></a>
 </div>
 {% endblock %}
