--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Ballets Website</title>
+    <link rel="stylesheet" href="public/styles.css">
+    
     <!-- Milligram CSS for Some Default Styling -->
     <!-- Google Fonts -->
     <link 
-        rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic" 
+        rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" 
     />
 
     <!-- CSS Reset -->
@@ -36,11 +38,16 @@
     <script 
         src="/app.js" defer>
     </script>
+
 </head>
 
-<body>
+<body class="body">
     <header>
-        <h1>The Ballet App</h1>
+        <nav><h1>The Ballet App</h1>
+            <a href="/ballets"><button>Ballets</button></a>
+            <a href="/companies"><button>Companies</button></a>
+        </nav>
+        
     </header>
 
     <main>{% block content %}My default content{% endblock %}</main>
