added a home page

--- a/views/ballets/index.liquid
+++ b/views/ballets/index.liquid
@@ -13,5 +13,6 @@
   </article>
   {% endfor %}
   <a href="/user/logout"><button>Logout</button></a>
+  <a href="/home"><button>home</button></a>
 </div>
 {% endblock %}
