created relationship between comanies and ballets by adding adding a post route, liquid file

--- a/views/ballets/show.liquid
+++ b/views/ballets/show.liquid
@@ -13,10 +13,17 @@
             Watched
             {% else %}
             Not Watched
-            {% endif %} 
+            {% endif %}
             <!-- {{ ballets.watched }} -->
         </h3>
-    
+        <div class="dropdown">
+            <button onclick="myFunction()" class="dropbtn">Select</button>
+            <div id="myDropdown" class="dropdown-content">
+                <input type="text" placeholder="Search..." id="myInput" onkeyup="filterFunction()">
+                <a href="">About</a>
+            </div>
+        </div>
+
         <a href="/ballets/{{ ballets.id }}/edit"><button>Edit</button></a>
         <form action="/ballets/{{ ballets.id }}?_method=DELETE" method="POST">
             <input type="submit" value="Delete" />
