--- a/views/home/show.liquid
+++ b/views/home/show.liquid
@@ -1,5 +1,5 @@
 {% layout "layout.liquid" %} {% block content %}
-<div>
+<div class="homebutton">
     <a href="/user/logout"><button>Logout</button></a>
 </div>
 {% endblock %}
