--- a/views/ballets/show.liquid
+++ b/views/ballets/show.liquid
@@ -7,7 +7,7 @@
         <h3> Composed by: <u>{{ ballets.composed }}</u> </h3>
         <h3> Choreographed by: <u>{{ ballets.choreographed }}</u> </h3>
         <h3> Premiered on: <u>{{ ballets.premiered }}</u></h3>
-        <h3> Clip: <u>{{ ballets.clip }}</u></h3>
+        <h3> Clip: </u></h3>
         <!-- <h3> Clip: <u>{{ ballets.clip }}</u></h3> -->
         <!-- <h3>
             Watched by user? {% if watched == true %}
