--- a/views/companies/new.liquid
+++ b/views/companies/new.liquid
@@ -27,6 +27,6 @@
     type="submit" 
     value="create new company" />
   </form>
-  <a href="/ballets`/"><button>Back</button></a>
+  <a href="/companies"><button>Back</button></a>
 </div>
 {% endblock %}
