--- a/views/home/show.liquid
+++ b/views/home/show.liquid
@@ -1,5 +1,10 @@
 {% layout "layout.liquid" %} {% block content %}
-<div class="homebutton">
+<div>
+    <nav class="homeButton">
+        <a href="/ballets"><button class="buttonOne">Ballets</button></a>
+        <a href="/companies"><button class="buttonTwo">Companies</button></a>
+    </nav>
+
     <a href="/user/logout"><button>Logout</button></a>
 </div>
 {% endblock %}
