updated liquid documents

--- a/views/user/login.liquid
+++ b/views/user/login.liquid
@@ -21,7 +21,7 @@
               required />
             </label>
             <input type="submit" value="Login" />
-            <a href="/signup"><button>Signup</button></a>
+            <a href="/user/signup"><button>Signup</button></a>
           </fieldset>
         </form>
       </div>
